--- a/package.json
+++ b/package.json
@@ -4,11 +4,25 @@
   "description": "The best way to address the world using humanity's only common, unambiguous language",
   "main": "index.js",
   "dependencies": {
+    "bootstrap-sass": "^3.3.5",
     "emojione": "^1.5.0",
-    "geohash-emoji": "^1.2.0"
+    "geohash-emoji": "^1.2.0",
+    "jquery": "^2.1.4"
   },
   "devDependencies": {
-    "browserify": "^11.0.1"
+    "browserify": "^11.0.1",
+    "browserify-shim": "^3.8.10",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-cssimport": "^2.1.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +36,25 @@
   "bugs": {
     "url": "https://github.com/louh/what3emojis/issues"
   },
-  "homepage": "http://www.what3emojis.com/"
+  "homepage": "http://www.what3emojis.com/",
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browser": {
+    "jquery": "./node_modules/jquery/dist/jquery.js",
+    "bootstrap": "./node_modules/bootstrap-sass/assets/javascripts/bootstrap.js"
+  },
+  "browserify-shim": {
+    "bootstrap-sass": {
+      "depends": "jquery:jQuery"
+    },
+    "jquery": "$",
+    "bootstrap": {
+      "depends": [
+        "jquery:jQuery"
+      ]
+    }
+  }
 }
