--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "emojione": "^1.5.0",
     "geohash-emoji": "^1.3.0",
     "jquery": "^2.1.4",
-    "leaflet": "^0.7.3",
+    "leaflet": "^1.0.0-beta.1",
     "leaflet-hash": "^0.2.1",
     "mapzen-ui": "git+https://github.com/mapzen/ui.git#0.4.0",
     "pelias-leaflet-geocoder": "git+https://github.com/pelias/leaflet-geocoder.git#v1.0.0-alpha"
