--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap-sass": "^3.3.5",
-    "emojione": "^1.5.0",
+    "emojione": "^1.5.2",
     "geohash-emoji": "^1.3.0",
     "jquery": "^2.1.4",
     "leaflet": "^1.0.0-beta.2",
     "leaflet-hash": "^0.2.1",
     "mapzen-ui": "git+https://github.com/mapzen/ui.git#0.4.0",
-    "pelias-leaflet-geocoder": "^1.0.1"
+    "pelias-leaflet-geocoder": "^1.1.0"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
-    "browserify-shim": "^3.8.10",
-    "event-stream": "^3.3.1",
+    "browserify-shim": "^3.8.11",
+    "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
-    "gulp-cssimport": "^2.1.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-cssimport": "^2.1.1-b",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
