--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap-sass": "^3.3.6",
-    "emojione": "^1.5.2",
+    "emojione": "^2.0.1",
     "geohash-emoji": "^1.3.0",
-    "jquery": "^2.1.4",
+    "jquery": "^2.2.0",
     "leaflet": "^1.0.0-beta.2",
     "leaflet-hash": "^0.2.1",
     "mapzen-ui": "git+https://github.com/mapzen/ui.git#0.4.0",
-    "leaflet-geocoder-mapzen": "^1.4.0"
+    "leaflet-geocoder-mapzen": "^1.4.1"
   },
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "browserify-shim": "^3.8.11",
+    "browserify": "^13.0.0",
+    "browserify-shim": "^3.8.12",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-cssimport": "^2.1.1-b",
+    "gulp-cssimport": "^2.1.2",
     "gulp-livereload": "^3.8.1",
-    "gulp-minify-css": "^1.2.2",
+    "gulp-minify-css": "^1.2.3",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
