--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "description": "The best way to address the world using humanity's only common, unambiguous language",
   "main": "index.js",
   "dependencies": {
-    "bootstrap-sass": "^3.3.6",
+    "bootstrap": "^4.0.0-alpha.2",
     "emojione": "^2.0.1",
     "geohash-emoji": "^1.3.0",
     "jquery": "^2.2.0",
     "leaflet": "^1.0.0-beta.2",
+    "leaflet-geocoder-mapzen": "^1.4.1",
     "leaflet-hash": "^0.2.1",
-    "mapzen-ui": "git+https://github.com/mapzen/ui.git#0.4.0",
-    "leaflet-geocoder-mapzen": "^1.4.1"
+    "mapzen-ui": "git+https://github.com/mapzen/ui.git#0.4.0"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
-    "browserify-shim": "^3.8.12",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
@@ -41,25 +40,5 @@
   "bugs": {
     "url": "https://github.com/louh/what3emojis/issues"
   },
-  "homepage": "http://www.what3emojis.com/",
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browser": {
-    "jquery": "./node_modules/jquery/dist/jquery.js",
-    "bootstrap": "./node_modules/bootstrap-sass/assets/javascripts/bootstrap.js"
-  },
-  "browserify-shim": {
-    "bootstrap-sass": {
-      "depends": "jquery:jQuery"
-    },
-    "jquery": "$",
-    "bootstrap": {
-      "depends": [
-        "jquery:jQuery"
-      ]
-    }
-  }
+  "homepage": "http://www.what3emojis.com/"
 }
