--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "leaflet": "^1.0.0-beta.2",
     "leaflet-geocoder-mapzen": "^1.4.1",
     "leaflet-hash": "^0.2.1",
-    "mapzen-ui": "git+https://github.com/mapzen/ui.git#0.4.0"
+    "leaflet.locatecontrol": "^0.47.0"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
