--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 machine:
   node:
-    version: 5.5.0
+    version: 4.4.3
 
 dependencies:
   post:
@@ -10,10 +10,10 @@ test:
   override:
     - echo 'no tests :·['
 
-deployment:
-  production:
-    branch: master
-    owner: circleci
-    commands:
-      - gulp build
-      - sftp -b ./deploy $PRODUCTION_USERNAME@$PRODUCTION_HOSTNAME
+# deployment:
+#   production:
+#     branch: master
+#     owner: circleci
+#     commands:
+#       - gulp build
+#       - sftp -b ./deploy $PRODUCTION_USERNAME@$PRODUCTION_HOSTNAME
