--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
-    "emojione": "^2.1.1",
-    "geohash-emoji": "^1.3.0",
-    "jquery": "^3.1.0",
-    "leaflet": "^1.0.0-beta.2",
-    "leaflet-geocoder-mapzen": "^1.5.1",
+    "emojione": "^3.0.3",
+    "geohash-emoji": "^1.3.1",
+    "jquery": "^3.2.1",
+    "leaflet": "^1.0.3",
+    "leaflet-geocoder-mapzen": "^1.9.2",
     "leaflet-hash": "^0.2.1",
-    "leaflet.locatecontrol": "^0.52.0"
+    "leaflet.locatecontrol": "^0.61.0"
   },
   "devDependencies": {
-    "browserify": "^13.0.0",
-    "event-stream": "^3.3.2",
+    "browserify": "^14.4.0",
+    "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-cssimport": "^3.1.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-cssimport": "^5.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
