--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The best way to address the world using humanity's only common, unambiguous language",
   "main": "index.js",
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap": "4.0.0-alpha.2",
     "emojione": "^3.0.3",
     "geohash-emoji": "^1.3.1",
     "jquery": "^3.2.1",
