Fix build destination, replace gulp-minify-css with gulp-clean-css

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-clean-css": "^3.4.1",
     "gulp-cssimport": "^5.0.0",
     "gulp-livereload": "^3.8.1",
-    "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
