--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "http-server": "^0.10.0",
+    "node-sass": "4.9.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
