--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "4.0.0-alpha.2",
-    "emojione": "^3.0.3",
-    "geohash-emoji": "^1.3.1",
-    "jquery": "^3.2.1",
-    "leaflet": "^1.0.3",
-    "leaflet-geocoder-mapzen": "^1.9.2",
-    "leaflet-hash": "^0.2.1",
-    "leaflet.locatecontrol": "^0.61.0"
+    "emojione": "4.0.0",
+    "geohash-emoji": "1.3.1",
+    "jquery": "3.2.1",
+    "leaflet": "1.0.3",
+    "leaflet-geocoder-mapzen": "1.9.2",
+    "leaflet-hash": "0.2.1",
+    "leaflet.locatecontrol": "0.63.0",
+    "popper.js": "1.14.4"
   },
   "devDependencies": {
-    "http-server": "^0.10.0",
+    "http-server": "0.11.1",
     "node-sass": "4.9.3",
     "parcel-bundler": "1.9.7"
   },
