--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "4.3.1",
-    "emojione": "4.0.0",
+    "emojione": "4.5.0",
     "geohash-emoji": "1.3.2",
-    "jquery": "3.4.0",
-    "leaflet": "1.3.4",
+    "jquery": "3.4.1",
+    "leaflet": "1.5.1",
     "leaflet-geocoder-mapzen": "1.9.4",
     "leaflet-hash": "0.2.1",
-    "leaflet.locatecontrol": "0.65.1",
-    "popper.js": "1.14.5"
+    "leaflet.locatecontrol": "0.67.0",
+    "popper.js": "1.15.0"
   },
   "devDependencies": {
     "http-server": "0.11.1",
-    "node-sass": "4.10.0",
-    "parcel-bundler": "1.10.3"
+    "parcel-bundler": "1.12.3",
+    "sass": "1.22.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
