switch to vector tiles basemap: a merely mediocre way to display a location on earth, inferior to Emoji

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "leaflet-geocoder-mapzen": "1.9.4",
     "leaflet-hash": "0.2.1",
     "leaflet.locatecontrol": "0.71.1",
-    "popper.js": "1.16.1"
+    "popper.js": "1.16.1",
+    "protomaps": "0.6.1"
   },
   "devDependencies": {
     "http-server": "0.12.3",
