--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "protomaps": "1.23.1"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "2.9.3",
     "http-server": "14.1.1",
     "parcel": "2.9.3",
     "sass": "1.26.5"
