--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@parcel/transformer-sass": "2.9.3",
     "http-server": "14.1.1",
     "parcel": "2.9.3",
+    "process": "0.11.10",
     "sass": "1.68.0"
   },
   "scripts": {
